# BioVoid

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .temp_phase_updates.md  CODE_ANALYSIS_REPORT.md  CODE_REVIEW_PHASE0.md  Dockerfile  README.md  cspell.json  docker-compose.yml  main.py  main_parallel.py  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: README.md  artifact_integrity_chain_v1.md  blind_holdout_v1_report.md  center_integrity_report.md  false_positive_manual_review.md  false_positive_protocol.md  false_positive_report.md  fpocket_benchmark_report.md  fpocket_benchmark_report_v3.md  fpocket_runtime_setup_windows.md  md_validation_1g66_report.md  md_validation_protocol.md  metrics_definition.md  p1.1_diagnostic_report.md  p1.1_parameter_sweep.md  phase55_gate_recovery_diag.json  phase5_5_gate_decision.md  phase5_5_gate_decision_recovery_v2_transition.md  phase6_plus_index.md  phase6_release_checklist.md  phase6_rollback_runbook.md  phase6_staging_runbook.md  phase6_step1_prestart_freeze_report.md  phase6_step2_backend_api_report.md  phase6_step2_openapi_snapshot.json  phase6_step3_web_portal_report.md  phase6_step3_web_portal_todo.md  phase6_step4_guard_snapshot.md  phase6_step4_ops_guard_report.md  phase6_step4_ops_guard_todo.md  phase6_step5_final_integration_report.md  phase6_step5_final_integration_todo.md  phase6_step5_integration_snapshot.md  phase6_transition_agent_prompts.md  phase6_transition_governance.md  phase6_transition_readiness_report.md  publication_claims_checklist_v1.md  publication_freeze_gate_v1.md  (+26 more)
scripts/: db_check.py  (+55 more)
(+100 files in other folders)
